// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should override default attributes 1`] = `
Object {
  "data": "{
    \\"component\\": {
        \\"N\\": [
            0
        ]
    }
}",
  "html": "<div id=\\"foo\\"></div>",
}
`;

exports[`should override variables attributes 1`] = `
Object {
  "data": "{
    \\"component\\": {
        \\"N\\": [
            0
        ]
    }
}",
  "html": "<div id=\\"foo\\"></div>",
}
`;

exports[`should render arrays 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"N\\": [
            0,
            [
                0,
                0
            ],
            [
                0,
                2
            ],
            [
                0,
                4
            ]
        ]
    },
    \\"2\\": {
        \\"N\\": [
            1,
            [
                1,
                0
            ],
            [
                1,
                2
            ],
            [
                1,
                4
            ]
        ]
    },
    \\"3\\": {
        \\"N\\": [
            2,
            [
                2,
                0
            ],
            [
                2,
                2
            ],
            [
                2,
                4
            ]
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\",
            \\"2\\",
            \\"3\\"
        ],
        \\"N\\": [
            0
        ]
    }
}",
  "html": "
<ul>
  <li>0
    <!--0-->:
    <!--1-->1
  </li>
  <li>1
    <!--0-->:
    <!--1-->2
  </li>
  <li>2
    <!--0-->:
    <!--1-->3
  </li>
</ul>
",
}
`;

exports[`should work for custom tags 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"O\\": {
            \\"foo\\": \\"foo\\",
            \\"boo\\": \\"boo\\",
            \\"bar\\": \\"bar\\"
        },
        \\"N\\": [
            0,
            [
                0,
                0
            ],
            1,
            [
                1,
                0
            ],
            2,
            [
                2,
                0
            ]
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\"
        ],
        \\"N\\": [
            0
        ]
    }
}",
  "html": "
<div>
  <i>foo</i>
  <i>boo</i>
  <i>bar</i>
</div>
",
}
`;

exports[`should work for custom tags proxy __data__ 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"O\\": {
            \\"foo\\": \\"foo\\",
            \\"boo\\": \\"boo\\",
            \\"bar\\": \\"bar\\"
        },
        \\"N\\": [
            0,
            [
                0,
                0
            ],
            1,
            [
                1,
                0
            ],
            2,
            [
                2,
                0
            ]
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\"
        ],
        \\"N\\": [
            0
        ]
    }
}",
  "html": "
<div>
  <i>foo</i>
  <i>boo</i>
  <i>bar</i>
</div>
",
}
`;

exports[`should work for custom tags with attributes with values 1`] = `
Object {
  "data": "{
    \\"component\\": {
        \\"N\\": [
            0
        ]
    }
}",
  "html": "<div></div>",
}
`;

exports[`should work for custom tags with constant attributes values 1`] = `
Object {
  "data": "{
    \\"1\\": {
        \\"O\\": {
            \\"foo\\": \\"foo\\"
        },
        \\"N\\": [
            0,
            [
                0,
                0
            ],
            1,
            [
                1,
                0
            ],
            2,
            [
                2,
                0
            ]
        ]
    },
    \\"component\\": {
        \\"C\\": [
            \\"1\\"
        ],
        \\"N\\": [
            0
        ]
    }
}",
  "html": "
<div>
  <i>foo</i>
  <i> </i>
  <i> </i>
</div>
",
}
`;

exports[`should work for html elements 1`] = `
Object {
  "data": "{
    \\"component\\": {
        \\"N\\": [
            0
        ]
    }
}",
  "html": "<div id=\\"id\\" data-attr=\\"data\\" class=\\"foo\\"></div>",
}
`;
